--- a/crystal_functions/lattice_dynamics/Example/file_readwrite.ipynb
+++ b/crystal_functions/lattice_dynamics/Example/file_readwrite.ipynb
@@ -5,11 +5,12 @@
    "id": "85bb3049",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "## Introduction\n",
     "\n",
-    "Used to extract the harmonic frequency calculation data from the output. Returned to a Thermal_output class, which is inherited from Crystal_out, with attributes of crystal output objects and thermodynamic-specific attributes, including:\n",
+    "Class freq_output, used to extract the harmonic frequency calculation data from the output. Returned to a Thermal_output class, which is inherited from Crystal_out, with attributes of crystal output objects and thermodynamic-specific attributes, including:\n",
     "\n",
-    "* self.lattice, pymatgen structure objection, for geometry information.  \n",
+    "* self.lattice, pymatgen structure objection, for geometry information.\n",
+    "* self.edft, float, DFT total energy of simulation cell. Unit: KJ / mol cell.\n",
     "* self.nqpoint, int, number of q point where the frequencies are calculated.  \n",
     "* self.qpoint, nqpoint * 3 numpy array, the fractional coordinates of q points in reciprocal lattice.  \n",
     "* self.nmode, nqpoint * 1 numpy array, the numbers of modes at each q point.  \n",
@@ -28,15 +29,15 @@
    "id": "1e7b16ae",
    "metadata": {},
    "source": [
-    "# Examples\n",
+    "## Examples\n",
     "    \n",
-    "1. Form I paracetamol, 'freqf1-r0.out', $\\Gamma$ point HA frequencies. nqpoint = 1, nmode = 240, natom = 80.  \n",
-    "2. A graphene primitive cell, 'nostr-modes.out', phonon dispersion calculated along the $\\Gamma-K-M$ path, with occasional warning messages. nqpoint = 123, nmode = 6, natom = 2."
+    "1. Form I paracetamol, 'freqf1-r0.out', $\\Gamma$ point HA frequencies, with occasional warning messages. nqpoint = 1, nmode = 240, natom = 80.  \n",
+    "2. A graphene primitive cell, 'nostr-modes.out', phonon dispersion calculated along the $\\Gamma-K-M$ path. nqpoint = 123, nmode = 6, natom = 2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "8514470d",
    "metadata": {},
    "outputs": [],
@@ -44,12 +45,12 @@
     "from crystal_functions.file_readwrite import Crystal_output\n",
     "from crystal_functions.convert import cry_out2pmg\n",
     "\n",
-    "\n",
-    "class Thermal_output(Crystal_output):\n",
+    "class Freq_output(Crystal_output):\n",
     "    \"\"\"\n",
-    "    Class Thermal_output, inheriated from Crystal_out and with thermodynamic-\n",
+    "    Class Freq_output, inheriated from Crystal_out and with thermodynamic-\n",
     "    specific attributes, including:\n",
     "        self.lattice: __init__, Lattice information\n",
+    "        self.edft: get_edft, DFT total energy, with probable corrections. Unit: KJ / mol cell\n",
     "        self.nqpoint: get_qpoint, Number of q points\n",
     "        self.qpoint: get_qpoint, Fractional coordinates of qpoints\n",
     "        self.nmode: get_mode, Number of vibrational modes at all qpoints\n",
@@ -65,8 +66,27 @@
     "            self, Crystal_functions output object\n",
     "            self.lattice, pymatgen structure object, lattice and atom information\n",
     "        \"\"\"\n",
-    "        super(Thermal_output, self).__init__(output_name)\n",
+    "        super(Freq_output, self).__init__(output_name)\n",
     "        self.lattice = cry_out2pmg(self, initial=False, vacuum=500)\n",
+    "        \n",
+    "    def get_edft(self):\n",
+    "        '''\n",
+    "        Get the DFT total energy of simulation cell. Unit: KJ / mol cell. To include\n",
+    "        probable energy corrections, the value at 'CENTRAL POINT' of force constant \n",
+    "        matrix is adopted.\n",
+    "        Input:\n",
+    "            -\n",
+    "        Output:\n",
+    "            self.edft, float, DFT total energy. Unit: KJ / mol cell\n",
+    "        '''\n",
+    "        import re\n",
+    "        \n",
+    "        for i, line in enumerate(self.data):\n",
+    "            if re.match(r'\\s*CENTRAL POINT', line):\n",
+    "                self.edft = float(line.strip().split()[2]) * 2625.500256\n",
+    "                break\n",
+    "\n",
+    "        return self.edft\n",
     "\n",
     "    def get_qpoint(self):\n",
     "        \"\"\"\n",
@@ -75,7 +95,7 @@
     "            -\n",
     "        Output:\n",
     "            self.nqpoint, int, Number of q points where the frequencies are calculated.\n",
-    "            self.qpoint, nq * 3 numpy float array, fractional coordinates of qpoints.\n",
+    "            self.qpoint, nq * 3 numpy float array, Fractional coordinates of qpoints.\n",
     "        \"\"\"\n",
     "        import numpy as np\n",
     "        import re\n",
@@ -84,10 +104,10 @@
     "        self.qpoint = np.array([], dtype=float)\n",
     "\n",
     "        for i, line in enumerate(self.data):\n",
-    "            if re.search('EXPRESSED IN UNITS        OF DENOMINATOR', line):\n",
+    "            if re.search(r'EXPRESSED IN UNITS\\s*OF DENOMINATOR', line):\n",
     "                shrink = int(line.strip().split()[-1])\n",
     "                \n",
-    "            if re.search('DISPERSION K POINT NUMBER', line):\n",
+    "            if re.match(r'\\s*DISPERSION K POINT NUMBER', line):\n",
     "                coord = np.array(line.strip().split()[7:10], dtype=float)\n",
     "                self.qpoint = np.append(self.qpoint, coord / shrink)\n",
     "                self.nqpoint += 1\n",
@@ -123,20 +143,20 @@
     "        countline = 0\n",
     "        while countline < len(self.data):\n",
     "            is_freq = False\n",
-    "            if re.search('DISPERSION K POINT NUMBER', self.data[countline]):\n",
+    "            if re.match(r'\\s*DISPERSION K POINT NUMBER\\s*\\d', self.data[countline]):\n",
     "                countline += 2\n",
     "                is_freq = True\n",
     "            \n",
-    "            if re.search('MODES         EIGV          FREQUENCIES     IRREP',\n",
-    "                         self.data[countline]):\n",
+    "            if re.match(r'\\s*MODES\\s*EIGV\\s*FREQUENCIES\\s*IRREP', self.data[countline]):\n",
     "                countline += 2\n",
     "                is_freq = True\n",
     "\n",
     "            while self.data[countline].strip() and is_freq:\n",
-    "                line_data = self.ignore_signal_line(self.data[countline])\n",
-    "                nm_a = int(line_data[0].strip('-'))\n",
-    "                nm_b = int(line_data[1])\n",
-    "                freq = float(line_data[4])\n",
+    "                line_data = re.findall(r'\\-*[\\d\\.]+[E\\d\\-\\+]*', self.data[countline])\n",
+    "                if line_data:\n",
+    "                    nm_a = int(line_data[0].strip('-'))\n",
+    "                    nm_b = int(line_data[1])\n",
+    "                    freq = float(line_data[4])\n",
     "\n",
     "                for mode in range(nm_a, nm_b + 1):\n",
     "                    self.frequency = np.append(self.frequency, freq)\n",
@@ -182,19 +202,21 @@
     "        total_data = []\n",
     "        while countline < len(self.data) and countmode <= total_mode:\n",
     "            # Gamma point / phonon dispersion calculation\n",
-    "            if re.match(r'^ MODES IN PHASE', self.data[countline]) or\\\n",
-    "               re.match(r'^ NORMAL MODES NORMALIZED', self.data[countline]):\n",
+    "            if re.match(r'\\s*MODES IN PHASE', self.data[countline]) or\\\n",
+    "               re.match(r'\\s*NORMAL MODES NORMALIZED', self.data[countline]):\n",
     "                block_label = True\n",
-    "            elif re.match(r'^ MODES IN ANTI-PHASE', self.data[countline]):\n",
+    "            elif re.match(r'\\s*MODES IN ANTI-PHASE', self.data[countline]):\n",
     "                block_label = False\n",
     "\n",
     "            # Enter a block\n",
-    "            if 'FREQ(CM**-1)' in self.data[countline] and block_label:\n",
+    "            if re.match(r'\\s*FREQ\\(CM\\*\\*\\-1\\)', self.data[countline]) and\\\n",
+    "               block_label:\n",
     "                countline += 2\n",
     "                block_data = []\n",
     "                while self.data[countline].strip():\n",
     "                    # Trim annotation part (12 characters)\n",
-    "                    line_data = self.ignore_signal_line(self.data[countline][13:])\n",
+    "                    line_data = re.findall(r'\\-*[\\d\\.]+[E\\d\\-\\+]*', \n",
+    "                                           self.data[countline][13:])\n",
     "                    if line_data:\n",
     "                        block_data.append(line_data)\n",
     "\n",
@@ -224,30 +246,9 @@
     "            \n",
     "            self.eigenvector.append(q_rearrange)\n",
     "\n",
-    "        self.eigenvector = np.array(self.eigenvector) * 0.5292\n",
+    "        self.eigenvector = np.array(self.eigenvector) * 0.529177\n",
     "\n",
-    "        return self.eigenvector\n",
-    "    \n",
-    "    def ignore_signal_line(self, text, split_mark=''):\n",
-    "        \"\"\"\n",
-    "        Not a function for thermodynamics. Ignore the signalling floating-point\n",
-    "        exceptions in the output. Used for multi-line data. Warning message:\n",
-    "            Note: The following floating-point exceptions are signalling:\n",
-    "        \n",
-    "        Input: \n",
-    "            A text line generated by output.readlines()\n",
-    "        Output:\n",
-    "            The split line as a list of strings if this line does not begin\n",
-    "            with 'Note:' / 'IEEE'\n",
-    "        \"\"\"\n",
-    "        if 'Note:' in text or 'IEEE_' in text:\n",
-    "            return\n",
-    "        \n",
-    "        if not split_mark:\n",
-    "            return text.strip().split()\n",
-    "        else:\n",
-    "            return text.strip().split(split_mark)\n",
-    "            "
+    "        return self.eigenvector\n"
    ]
   },
   {
@@ -255,15 +256,15 @@
    "id": "2573d3d0",
    "metadata": {},
    "source": [
-    "# Tests\n",
-    "## Initialization and geometry\n",
+    "## Tests\n",
+    "### Initialization and geometry\n",
     "\n",
     "Note: Getting primitive lattice vectors of 2D and 1D periodic systems is under developing when this example is written. Thermal_output object of graphene is generated by avoide using `self.lattice` related commands. Line 26 and 178 were commented and line 179 was used to generate the 'paracetamol' and 'graphene' objects, except the cell below. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f458c8f9",
    "metadata": {
     "scrolled": true
@@ -364,7 +365,7 @@
     }
    ],
    "source": [
-    "paracetamol = Thermal_output('freqf1-r0.out')\n",
+    "paracetamol = Freq_output('freqf1-r0.out')\n",
     "print(paracetamol.lattice)"
    ]
   },
@@ -373,14 +374,14 @@
    "id": "24e91b08",
    "metadata": {},
    "source": [
-    "## Get qpoints and frequencies at each qpoint\n",
+    "### Get qpoints and frequencies at each qpoint\n",
     "\n",
     "nqpoint = 1, nmode = 240 for paracetamol case, nqpoint = 123, nmode = 3 for graphene case. In both cases, nqpoint should be an integer and nmode should be a numpy array."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "12595d21",
    "metadata": {},
    "outputs": [
@@ -388,6 +389,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Paracetamol EDFT: -5402457.523570631\n",
+      "Graphene EDFT: -28768041.661716238\n",
       "Paracetamol qpoint: 1 [0. 0. 0.]\n",
       "Graphene qpoints: 123\n",
       "Paracetamol modes: 1 [240.]\n",
@@ -401,8 +404,14 @@
     }
    ],
    "source": [
-    "paracetamol = Thermal_output('freqf1-r0.out')\n",
-    "graphene = Thermal_output('nostr_modes.out')\n",
+    "paracetamol = Freq_output('freqf1-r0.out')\n",
+    "graphene = Freq_output('nostr_modes.out')\n",
+    "\n",
+    "paracetamol.get_edft()\n",
+    "graphene.get_edft()\n",
+    "\n",
+    "print('Paracetamol EDFT:', paracetamol.edft)\n",
+    "print('Graphene EDFT:', graphene.edft)\n",
     "\n",
     "paracetamol.get_mode()\n",
     "graphene.get_mode()\n",
@@ -419,13 +428,13 @@
    "id": "16550ab4",
    "metadata": {},
    "source": [
-    "## Get eigenvectors\n",
+    "### Get eigenvectors\n",
     "Self.eigenvector should be a 1 (nqpoint) * 240 (nmode) * 80 (natom) * 3 (xyz) numpy array for paracetamol case. A 123 * 6 * 2 * 3 array for graphene case."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "d88c6de7",
    "metadata": {},
    "outputs": [
@@ -467,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "f03b4019",
    "metadata": {},
    "outputs": [
