Add Crystal_output class to Tutorial

--- a/tutorial/Tutorial.ipynb
+++ b/tutorial/Tutorial.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67be780c",
+   "id": "5c279f09",
    "metadata": {},
    "source": [
     "## CRYSTAL input"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed9b02ef",
+   "id": "f89fa3a7",
    "metadata": {},
    "source": [
     "First, functions need to be imported. Since crystal_functions was installed via pip, python already knows where to find it. Therefore, all functions can be imported following this logic:\n",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7d600030",
+   "id": "3e34efa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +40,12 @@
     "\n",
     "import sys\n",
     "sys.path.insert(1, '../crystal_functions/')\n",
-    "from file_readwrite import Crystal_input"
+    "from file_readwrite import Crystal_input, Crystal_output"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3932f616",
+   "id": "fe32d85b",
    "metadata": {},
    "source": [
     "### Build the input from blocks"
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dae473f1",
+   "id": "19d93487",
    "metadata": {},
    "source": [
     "The first exercise will be creating and writing a CRYSTAL input file. We will see later a more convenient way to do this, but for now we are just going to pass crystal_functions a list of parameters that we need to build the input and then write it. This corresponds to manually writing to file, but instead of writing to file we are creating python lists (delimited by square brackets and using commas as separators):"
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47da7a55",
+   "id": "5511352d",
    "metadata": {},
    "source": [
     "If we try to see what mgo_input, by executing the following command:"
@@ -113,14 +113,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "81a7f499",
+   "id": "f0ad4fb9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<file_readwrite.Crystal_input object at 0x1061eccd0>\n"
+      "<file_readwrite.Crystal_input object at 0x10793d880>\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4457044d",
+   "id": "d731b46b",
    "metadata": {},
    "source": [
     "You can see this is an object of the class file_readwrite.Crystal_input.\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "70c13804",
+   "id": "1567b872",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55bcd949",
+   "id": "d1ff736b",
    "metadata": {},
    "source": [
     "This can be used everytime we are not sure about the arguments for a function. You should see that the from_blocks() takes four positional arguments. Positional, in this context means mandatory. There is also a fifth optional one, which is “title”. The reason why this is optional is because a default value has already been defined in the function itself.\n",
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2b205df5",
+   "id": "6da212aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47ef1d72",
+   "id": "7e3ceec7",
    "metadata": {},
    "source": [
     "If we didn’t include title, crystal_functions would use “crystal_functions generated input” as first line of the input.\n",
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1faee533",
+   "id": "5ac0f40b",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04d894f4",
+   "id": "09ea467b",
    "metadata": {},
    "source": [
     "This displays the geom_block. \n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "96f255f3",
+   "id": "66a096a2",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a064fdc",
+   "id": "2e9c081d",
    "metadata": {},
    "source": [
     "### Build the input from an existing .d12 file"
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47b3b549",
+   "id": "93286b8f",
    "metadata": {},
    "source": [
     "If we already have a CRYSTAL input (.d12) saved to file, we can generate the Crystal_input object by reading this file. The .from_file function takes the path to the input file as an argument:"
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d424dd25",
+   "id": "82bae8d0",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b501b563",
+   "id": "d3da0599",
    "metadata": {},
    "source": [
     "### Manipulation of the CRYSTAL input"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79055703",
+   "id": "5b063a55",
    "metadata": {},
    "source": [
     "Once the Crystal_input object was created, we can use its class specific functions to modify it directly in this notebook.\n",
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e8a2c36a",
+   "id": "5b6f9951",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efd1758f",
+   "id": "64735bde",
    "metadata": {},
    "source": [
     "Since no arguments were passed to the function, only the OPTGEOM will be added:"
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "76ffacaf",
+   "id": "947ceb30",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "835d653e",
+   "id": "e99fd795",
    "metadata": {},
    "source": [
     "And now let's transform the input back into a single point calculation. \n",
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "04a355e3",
+   "id": "ed0977f6",
    "metadata": {},
    "outputs": [
     {
@@ -468,30 +468,123 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cffd6b2",
+   "id": "3116a0d2",
    "metadata": {},
    "source": [
     "**Now that you have seen how to use functions to act on the Crystal_input object, play with the other functions of the class. What information can be extracted from the Crystal_input object and what actions can be performed on the class?**\n",
     "\n",
-    "_Hint: in Jupyter Notebooks, if you click tab after object_name. you will see a list of available functions and attributes._"
+    "_Hint: in Jupyter Notebooks, if you click tab after object\\_name. you will see a list of available functions and attributes._"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ab24de45",
+   "execution_count": 13,
+   "id": "efd0c7d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mgo_input."
+    "#mgo_input."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "67e8e465",
+   "id": "75d7bf09",
    "metadata": {},
    "source": [
     "### Write the CRYSTAL input to file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7b1445e",
+   "metadata": {},
+   "source": [
+    "After generating and modifying the Crystal_input, the next step will be writing it to file. This is because CRYSTAL will need a .d12 input written to file in order to run the calculation. This will be done by using the \n",
+    "```console\n",
+    "write_crystal_input()\n",
+    "```\n",
+    "This function is part of the file_readwrite functions, but does not belong to any class. Therefore, it is called by simply using the function name and parsing its variables, as opposite to the functions that we have used so far. \n",
+    "\n",
+    "First, we will also need to import it since it is not part of the Crystal_input class:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "68af6153",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from crystal_functions.file_readwrite import write_crystal_input "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2f2a14c",
+   "metadata": {},
+   "source": [
+    "Now we can can call the function. It takes two positional arguments:\n",
+    "- input_name: name of the file to be written\n",
+    "- crystal_input: Crystal_input object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8805aa83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_name = 'data/mgo_input_tutorial.d12'\n",
+    "write_crystal_input(input_name, mgo_input)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42e26260",
+   "metadata": {},
+   "source": [
+    "We can verify the file was written and its content by using the following command, where the ! at the beginning of the line allows to execute bash commands from the Notebook:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3f8d0d00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CRYSTAL\r\n",
+      "0 0 0\r\n",
+      "225\r\n",
+      "4.217\r\n",
+      "2\r\n",
+      "12 0.    0.    0.\r\n",
+      "8 0.5   0.5   0.5\r\n",
+      "BASISSET\r\n",
+      "POB-DZVP\r\n",
+      "DFT\r\n",
+      "B3LYP\r\n",
+      "XXLGRID\r\n",
+      "ENDDFT\r\n",
+      "TOLINTEG\r\n",
+      "7 7 7 7 14\r\n",
+      "SHRINK\r\n",
+      "12 24\r\n",
+      "MAXCYCLE\r\n",
+      "200\r\n",
+      "FMIXING\r\n",
+      "70\r\n",
+      "DIIS\r\n",
+      "ENDSCF\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! cat 'data/mgo_input_tutorial.d12'"
    ]
   },
   {
@@ -512,7 +605,221 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5a9cf9e",
+   "id": "22a4c2b7",
+   "metadata": {},
+   "source": [
+    "## CRYSTAL output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f4383f5",
+   "metadata": {},
+   "source": [
+    "The same approach we used to read the input, can be applied to reading the CRYSTAL output.\n",
+    "\n",
+    "**Can you guess what the class that reads the output is called? Please import it in the cell below.**\n",
+    "\n",
+    "_Hint: What can you see if you type_\n",
+    "```console\n",
+    "from crystal_functions.file_readwrite import\n",
+    "```\n",
+    "_and press Tab after the 'import' command? Can you see a class that might read the Crystal_output?_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "15b6c970",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from crystal_functions.file_readwrite import Crystal_output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f54e233",
+   "metadata": {},
+   "source": [
+    "For this example we are going to use the 'data/mgo_optgeom.out'.\n",
+    "\n",
+    "Like for the Crystal_input, we will first initialise the object and then read the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0889bddb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mgo_output = Crystal_output()\n",
+    "mgo_output.read_cry_output('data/mgo_optgeom.out')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11d250f4",
+   "metadata": {},
+   "source": [
+    "Now that the mgo_output was created and the CRYSTAL output file was read, the functions belonging to the Crystal_object class can be used to extract information from the object itself.\n",
+    "\n",
+    "For example, let's see what the final energy of the system is. For this we will use the function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "73578d4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-7495.341792877063"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mgo_output.get_final_energy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73bff2bc",
+   "metadata": {},
+   "source": [
+    "**Explore what other information can be extracted from the Crystal_output object by completing the code in the cell below:**\n",
+    "\n",
+    "_Hint: remember the Tab key is your friend and that in python functions end with ()_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "0c637494",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dimensionality of the system is 3\n",
+      "The band gap of the system is 7.1237 eV\n",
+      "The Fermi energy of the system is -4.13671240282 eV\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The dimensionality of the system is %s'%mgo_output.get_dimensionality())\n",
+    "print('The band gap of the system is %s eV'%mgo_output.get_band_gap())\n",
+    "print('The Fermi energy of the system is %s eV'%mgo_output.get_fermi_energy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "995aae4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print('The dimensionality of the system is %s'%mgo_output.INSERT_FUNCTION_HERE)\n",
+    "#print('The band gap of the system is %s eV'%mgo_output.INSERT_FUNCTION_HERE)\n",
+    "#print('The Fermi energy of the system is %s eV'%mgo_output.INSERT_FUNCTION_HERE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0db2c96",
+   "metadata": {},
+   "source": [
+    "In the cell above, all functions return one value only (a scalar or an integer). Some other functions will return:\n",
+    "- other data structure, such as lists, for example the get_mulliken_charges() function\n",
+    "- more than one value/structure, for example the get_last_geom() function. Let's have a look at what we get back when we execute this function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "6c49254a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[0.0, 2.12011000819, 2.12011000819],\n",
+       "  [2.12011000819, 0.0, 2.12011000819],\n",
+       "  [2.12011000819, 2.12011000819, 0.0]],\n",
+       " [12, 8],\n",
+       " [[0.0, 0.0, 0.0], [-2.12011000819, -2.12011000819, -2.12011000819]]]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mgo_output.get_last_geom()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6bf667e",
+   "metadata": {},
+   "source": [
+    "If you would like to know what these values are, the best approach is to have a look at the source code itself. This can be found at this <a href=\"https://github.com/crystal-code-tools/crystal_functions/blob/main/crystal_functions/file_readwrite.py\">link</a> (look for \"get_last_geom\").\n",
+    "\n",
+    "You should see that the list returned at the end of the function, self.last_geom, contains three elements:\n",
+    "- the lattice vectors (2D list)\n",
+    "- the atomic numbers (list)\n",
+    "- the cartesian coordinates (list)\n",
+    "\n",
+    "Therefore, a better way to extract information from this function is to assign the values as shown below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "dc112a15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The system's lattice vectors are:\n",
+      " [[0.0, 2.12011000819, 2.12011000819], [2.12011000819, 0.0, 2.12011000819], [2.12011000819, 2.12011000819, 0.0]]\n",
+      "The system's atomic numbers are:\n",
+      " [12, 8]\n",
+      "The system's cartesian coordinates are:\n",
+      " [[0.0, 0.0, 0.0], [-2.12011000819, -2.12011000819, -2.12011000819]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lattice_vectors, atomic_numbers, cart_coords = mgo_output.get_last_geom()\n",
+    "print('The system\\'s lattice vectors are:\\n',lattice_vectors)\n",
+    "print('The system\\'s atomic numbers are:\\n',atomic_numbers)\n",
+    "print('The system\\'s cartesian coordinates are:\\n',cart_coords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3375aafc",
+   "metadata": {},
+   "source": [
+    "For a full list of information that can be extracted from the Crystal_output object, please refer to <a href=\"https://github.com/crystal-code-tools/crystal_functions/blob/main/examples/file_readwrite.ipynb\">this example notebook</a>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12a38d60",
    "metadata": {},
    "source": [
     "# REMOVE BELOW"
@@ -520,8 +827,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "a5f93972",
+   "execution_count": 19,
+   "id": "55e69289",
    "metadata": {},
    "outputs": [],
    "source": [
