Add clean_imaginary to clean negative modes

--- a/crystal_functions/lattice_dynamics/Example/file_readwrite.ipynb
+++ b/crystal_functions/lattice_dynamics/Example/file_readwrite.ipynb
@@ -5,6 +5,7 @@
    "id": "85bb3049",
    "metadata": {},
    "source": [
+    "# Freq_output Class\n",
     "## Introduction\n",
     "\n",
     "Class freq_output, used to extract the harmonic frequency calculation data from the output. Returned to a Thermal_output class, which is inherited from Crystal_out, with attributes of crystal output objects and thermodynamic-specific attributes, including:\n",
@@ -14,14 +15,14 @@
     "* self.nqpoint, int, number of q point where the frequencies are calculated.  \n",
     "* self.qpoint, nqpoint * 3 numpy array, the fractional coordinates of q points in reciprocal lattice.  \n",
     "* self.nmode, nqpoint * 1 numpy array, the numbers of modes at each q point.  \n",
-    "* self.frequency, nqpoint * nmode numpy array, the vibrational frequencies ($\\nu$) of each mode at each q point. Unit: THz. \n",
+    "* self.frequency, nqpoint * nmode numpy array, the vibrational frequencies ($\\nu$) of each mode at each q point. Unit: THz.\n",
     "\n",
     "Note: \n",
     "\n",
     "Angular frequency: $\\omega = 2\\pi\\nu$  \n",
     "Eigen value of dynamic matrix: $\\lambda = \\nu^{2}$\n",
     "\n",
-    "* self.eigenvector, nqpoint * nmode * natom * 3 numpy array, the eigenvectors of dynamic matrix at each atom, each vibrational mode and each qpoint. Classical amplitude (298.15K), expressed in Cartesian coordinates. Unit: Angstrom.\n"
+    "* self.eigenvector, nqpoint * nmode * natom * 3 numpy array, the eigenvectors of dynamic matrix at each atom, each vibrational mode and each qpoint. Classical amplitude (298.15K), expressed in Cartesian coordinates. Unit: Angstrom.  "
    ]
   },
   {
@@ -32,12 +33,13 @@
     "## Examples\n",
     "    \n",
     "1. Form I paracetamol, 'freqf1-r0.out', $\\Gamma$ point HA frequencies, with occasional warning messages. nqpoint = 1, nmode = 240, natom = 80.  \n",
-    "2. A graphene primitive cell, 'nostr-modes.out', phonon dispersion calculated along the $\\Gamma-K-M$ path. nqpoint = 123, nmode = 6, natom = 2."
+    "2. A graphene primitive cell, 'nostr-modes.out', phonon dispersion calculated along the $\\Gamma-K-M$ path. nqpoint = 123, nmode = 6, natom = 2.  \n",
+    "3. Form II paracetamol, 'f2p2q-r1.out', $\\Gamma$ point HA frequencies, with imaginary modes. nqpoint = 1, nmode = 480, natom = 160.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "8514470d",
    "metadata": {},
    "outputs": [],
@@ -248,7 +250,37 @@
     "\n",
     "        self.eigenvector = np.array(self.eigenvector) * 0.529177\n",
     "\n",
-    "        return self.eigenvector\n"
+    "        return self.eigenvector\n",
+    "    \n",
+    "    def clean_imaginary(self):\n",
+    "        \"\"\"\n",
+    "        Substitute imaginary modes and corresponding eigenvectors with numpy\n",
+    "        NaN format and print warning message.\n",
+    "        \n",
+    "        Input:\n",
+    "            -\n",
+    "        Output:\n",
+    "            cleaned attributes.\n",
+    "            self.frequency\n",
+    "            self.eigenvector\n",
+    "        \"\"\"\n",
+    "        import numpy as np\n",
+    "        \n",
+    "        for q, freq in enumerate(self.frequency):\n",
+    "            if freq[0] > -1e-4:\n",
+    "                continue\n",
+    "\n",
+    "            print('WARNING: Negative frequencies detected - Calculated thermodynamics might be inaccurate.')\n",
+    "            print('WARNING: Negative frequencies will be substituted with NaN.')\n",
+    "            \n",
+    "            neg_rank = np.where(freq <= -1e-4)[0]\n",
+    "            self.frequency[q, neg_rank] = np.nan\n",
+    "            \n",
+    "            natom = len(self.lattice.sites)\n",
+    "            nan_eigvt = np.full([natom, 3], np.nan)\n",
+    "            self.eigenvector[q, neg_rank] = nan_eigvt\n",
+    "\n",
+    "        return self.nmode, self.frequency, self.eigenvector\n"
    ]
   },
   {
@@ -542,6 +574,62 @@
     "            Z     0.2007    0.2041    0.0001    0.0001   -0.0001   -0.0000 \n",
     "```\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbba9bc8",
+   "metadata": {},
+   "source": [
+    "### Get rid of negative frequency\n",
+    "A test is performed on a harmonic phonon output with negative frequencies. In principle, the user is expected to redo all calculations to get rid of imaginary modes, instead of continuing thermodynamic analysis. Here we assume the user does not know the existance of imagninary modes.\n",
+    "\n",
+    "Tests performed on Form II paracetamol $\\Gamma$ point, stretched by 2% volumetric strain. There are 160 atoms, 480 modes, 1 qpoint. The output is attached in the same directory named as 'f2p2q-r1.out'. Modes 1-5 are negative, as given below:\n",
+    "\n",
+    "```\n",
+    "    MODES         EIGV          FREQUENCIES     IRREP  IR   INTENS    RAMAN\n",
+    "             (HARTREE**2)   (CM**-1)     (THZ)             (KM/MOL)\n",
+    "    1-   1   -0.7201E-07    -58.8941   -1.7656  (B3g)   I (     0.00)   A\n",
+    "    2-   2   -0.6031E-07    -53.9001   -1.6159  (Ag )   I (     0.00)   A\n",
+    "    3-   3   -0.3525E-07    -41.2052   -1.2353  (Au )   I (     0.00)   I\n",
+    "    4-   4   -0.1932E-07    -30.5064   -0.9146  (B2g)   I (     0.00)   A\n",
+    "    5-   5   -0.2848E-08    -11.7124   -0.3511  (B1g)   I (     0.00)   A\n",
+    "    6-   6   -0.4132E-19      0.0000    0.0000  (B2u)   A (     0.00)   I\n",
+    "```\n",
+    "\n",
+    "PS: Never use pob-TZVP basis set for energies, that is miserable :-)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "985f98aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Negative frequencies detected - Calculated thermodynamics might be inaccurate.\n",
+      "WARNING: Negative frequencies will be substituted with NaN.\n",
+      "[nan nan nan nan nan  0.]\n",
+      "[[       nan        nan        nan]\n",
+      " [       nan        nan        nan]\n",
+      " [       nan        nan        nan]\n",
+      " [       nan        nan        nan]\n",
+      " [       nan        nan        nan]\n",
+      " [-0.0152403 -0.         0.       ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "neg_freq = Freq_output('f2p2q-r1.out')\n",
+    "neg_freq.get_mode()\n",
+    "neg_freq.get_eigenvector()\n",
+    "neg_freq.clean_imaginary()\n",
+    "\n",
+    "print(neg_freq.frequency[0, :6])\n",
+    "print(neg_freq.eigenvector[0, :6, 0, :])"
+   ]
   }
  ],
  "metadata": {
@@ -560,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
