debug clean_imaginary method

--- a/crystal_functions/lattice_dynamics/Example/file_readwrite.ipynb
+++ b/crystal_functions/lattice_dynamics/Example/file_readwrite.ipynb
@@ -276,11 +276,15 @@
     "            neg_rank = np.where(freq <= -1e-4)[0]\n",
     "            self.frequency[q, neg_rank] = np.nan\n",
     "            \n",
-    "            natom = len(self.lattice.sites)\n",
-    "            nan_eigvt = np.full([natom, 3], np.nan)\n",
-    "            self.eigenvector[q, neg_rank] = nan_eigvt\n",
+    "            if hasattr(self, 'eigenvector'):\n",
+    "                natom = len(self.lattice.sites)\n",
+    "                nan_eigvt = np.full([natom, 3], np.nan)\n",
+    "                self.eigenvector[q, neg_rank] = nan_eigvt\n",
     "\n",
-    "        return self.nmode, self.frequency, self.eigenvector\n"
+    "        if hasattr(self, 'eigenvector'):\n",
+    "            return self.frequency, self.eigenvector\n",
+    "        else:\n",
+    "            return self.frequency\n"
    ]
   },
   {
