Update file_readwrite tutorial to make the style unified

--- a/crystal_functions/lattice_dynamics/Example/file_readwrite.ipynb
+++ b/crystal_functions/lattice_dynamics/Example/file_readwrite.ipynb
@@ -5,36 +5,48 @@
    "id": "85bb3049",
    "metadata": {},
    "source": [
-    "# Freq_output Class\n",
-    "## Introduction\n",
+    "# Basic I/O of DFPT\n",
+    "This script 'file_readwrite.py' is the density functional perturbation theory (DFPT) version of 'file_readwrite.py', including DFPT specific methods and attributes.\n",
     "\n",
-    "Class freq_output, used to extract the harmonic frequency calculation data from the output. Returned to a Thermal_output class, which is inherited from Crystal_out, with attributes of crystal output objects and thermodynamic-specific attributes, including:\n",
+    "## Class Freq_output\n",
     "\n",
-    "* self.lattice, pymatgen structure objection, for geometry information.\n",
-    "* self.edft, float, DFT total energy of simulation cell. Unit: KJ / mol cell.\n",
-    "* self.nqpoint, int, number of q point where the frequencies are calculated.  \n",
-    "* self.qpoint, nqpoint * 3 numpy array, the fractional coordinates of q points in reciprocal lattice.  \n",
-    "* self.nmode, nqpoint * 1 numpy array, the numbers of modes at each q point.  \n",
-    "* self.frequency, nqpoint * nmode numpy array, the vibrational frequencies ($\\nu$) of each mode at each q point. Unit: THz.\n",
+    "Class Freq_output, used to extract the harmonic frequency calculation data from the output.The Freq_output class is inherited from the Crystal_out class, with attributes of crystal output objects and thermodynamic-specific attributes.\n",
+    "\n",
+    "### Methods\n",
+    "\n",
+    "**\\_\\_init\\_\\_(output_name)**  \n",
+    "Initialisation. Required input: output_name, a string specifying the name of CRYSTAL output file.\n",
+    "\n",
+    "**get_edft()**  \n",
+    "Get DFT total energy of the system. In case of possible empirical corrections, the total energy reported at the central point when taking the numerical secondary derivatives is used, instead of the converged value at the final step of SCF. Unit: KJ/mol cell\n",
+    "\n",
+    "**get_qpoint()**  \n",
+    "Get the list of q points where the vibrational frequency is calculated. Dispersion output (multiple q points) is supported.\n",
+    "\n",
+    "**get_mode()**  \n",
+    "Get frequencies of all modes at all the q points sampled. Unit: THz.\n",
+    "\n",
+    "**get_eigenvector()**  \n",
+    "Get the eigenvectors of all normal modes. Eigenvectors are normalised to classical amplitudes. Unit: Angstrom\n",
+    "\n",
+    "**clean_imaginary()**  \n",
+    "Substitute the negative frequencies with numpy NaN values and keep the original shape of numpy arrays. Not a standalone method. Used after get_mode(). The threshold of a negative frequency is -0.0001 THz.\n",
+    "\n",
+    "### Attributes\n",
+    "\n",
+    "* **self.lattice**, \\_\\_init\\_\\_, pymatgen structure objection, for geometry information.\n",
+    "* **self.edft**, get_edft, float, DFT total energy of simulation cell. Unit: KJ / mol cell.\n",
+    "* **self.nqpoint**, get_qpoint, int, number of q point where the frequencies are calculated.  \n",
+    "* **self.qpoint**, get_qpoint, nqpoint * 3 numpy array, the fractional coordinates of q points in reciprocal lattice.  \n",
+    "* **self.nmode**, get_mode, nqpoint * 1 numpy array, the numbers of modes at each q point.  \n",
+    "* **self.frequency**, get_mode and clean_imaginary, nqpoint * nmode numpy array, the vibrational frequencies ($\\nu$) of each mode at each q point. Unit: THz.\n",
     "\n",
     "Note: \n",
     "\n",
     "Angular frequency: $\\omega = 2\\pi\\nu$  \n",
     "Eigen value of dynamic matrix: $\\lambda = \\nu^{2}$\n",
     "\n",
-    "* self.eigenvector, nqpoint * nmode * natom * 3 numpy array, the eigenvectors of dynamic matrix at each atom, each vibrational mode and each qpoint. Classical amplitude (298.15K), expressed in Cartesian coordinates. Unit: Angstrom.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1e7b16ae",
-   "metadata": {},
-   "source": [
-    "## Examples\n",
-    "    \n",
-    "1. Form I paracetamol, 'freqf1-r0.out', $\\Gamma$ point HA frequencies, with occasional warning messages. nqpoint = 1, nmode = 240, natom = 80.  \n",
-    "2. A graphene primitive cell, 'nostr-modes.out', phonon dispersion calculated along the $\\Gamma-K-M$ path. nqpoint = 123, nmode = 6, natom = 2.  \n",
-    "3. Form II paracetamol, 'f2p2q-r1.out', $\\Gamma$ point HA frequencies, with imaginary modes. nqpoint = 1, nmode = 480, natom = 160.  "
+    "* **self.eigenvector**, get_eigenvector, nqpoint * nmode * natom * 3 numpy array, the eigenvectors of dynamic matrix at each atom, each vibrational mode and each qpoint. Classical amplitude (298.15K), expressed in Cartesian coordinates. Unit: Angstrom.  "
    ]
   },
   {
@@ -293,6 +305,19 @@
    "metadata": {},
    "source": [
     "## Tests\n",
+    "\n",
+    "3 test are performed. The first one is for $\\Gamma$ point frequencies. The second one is for dispersion calculations. The last one has negative frequencies, in order to examine the method `clean_imaginary`. \n",
+    "\n",
+    "1. Form I paracetamol, 'freqf1-r0.out', $\\Gamma$ point HA frequencies, with occasional warning messages. nqpoint = 1, nmode = 240, natom = 80.  \n",
+    "2. A graphene primitive cell, 'nostr-modes.out', phonon dispersion calculated along the $\\Gamma-K-M$ path. nqpoint = 123, nmode = 6, natom = 2.  \n",
+    "3. Form II paracetamol, 'f2p2q-r1.out', $\\Gamma$ point HA frequencies, with imaginary modes. nqpoint = 1, nmode = 480, natom = 160.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7d8d4e0",
+   "metadata": {},
+   "source": [
     "### Initialization and geometry\n",
     "\n",
     "Note: Getting primitive lattice vectors of 2D and 1D periodic systems is under developing when this example is written. Thermal_output object of graphene is generated by avoide using `self.lattice` related commands. Line 26 and 178 were commented and line 179 was used to generate the 'paracetamol' and 'graphene' objects, except the cell below. "
